log/build_2022-05-04_20-39-28/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_data.py", line 195
    def main(args=None):
    ^
SyntaxError: invalid syntax

